force-app/main/default/objects/WebshopBrandLink__c/WebshopBrandLink__c.object-meta.xml
<CustomObject>
    <description>Brand to complementary product links for the LWR webshop.</description>
    <label>Webshop Brand Link</label>
    <nameField>
        <displayFormat>BLINK-{0000000}</displayFormat>
        <label>Webshop Brand Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webshop Brand Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>