force-app/main/default/objects/WebshopBrandLink__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Webshop Brand Links</relationshipLabel>
    <relationshipName>Webshop_Brand_Links</relationshipName>
    <type>Lookup</type>
</CustomField>