force-app/main/default/objects/WebshopBrandLink__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>WebshopBrand__c</referenceTo>
    <relationshipLabel>Webshop Brand Links</relationshipLabel>
    <relationshipName>Webshop_Brand_Links</relationshipName>
    <type>Lookup</type>
</CustomField>