force-app/main/default/objects/WebshopBrandLink__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produkt</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Webshop Brand Links</relationshipLabel>
    <relationshipName>Webshop_Brand_Links</relationshipName>
    <type>Lookup</type>
</CustomField>